# Agentic-AI-Microservice-API

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/agents/: guardrails.py  planner.py  prompts.py  runtime.py  state.py
app/api/: deps.py
app/api/routes/: __init__.py  agent.py  health.py  prompt.py  tools.py  ui.py
app/core/: config.py  logging.py  security.py
app/llm/: base.py  openai_compatible.py
app/schemas/: events.py  requests.py  responses.py
app/static/: app.js  index.html  styles.css
app/tools/: base.py  registry.py  safe_math.py  text_utils.py  web_fetch_stub.py
scripts/: run_dev.sh
tests/: conftest.py  fakes.py  test_health.py  test_prompt_preview.py  test_request_validation.py  test_runtime_guardrails.py  test_tools.py
