[project]
name = "agentic-ai-microservice-api"
version = "0.1.0"
description = "Steerable agent runtime microservice with tool use, guardrails, and observability"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Priye" }]
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "openai==1.75.0",
  "pydantic==2.11.3",
  "pydantic-settings==2.8.1",
  "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "httpx==0.28.1",
  "ruff==0.11.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
